--- a/template/package.json
+++ b/template/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "{{ name }}",
+  "name": "{{name}}",
   "version": "1.0.0",
-  "description": "",
+  "description": "{{description}}",
   "main": "index.js",
   "scripts": {
     "build": "rollup -c",
