--- a/template/package.json
+++ b/template/package.json
@@ -2,7 +2,9 @@
   "name": "{{name}}",
   "version": "1.0.0",
   "description": "{{description}}",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "module": "lib/index.esm.js",
+  "browser": "lib/index.umd.js",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
@@ -14,18 +16,24 @@
   "license": "ISC",
   "dependencies": {
     "eventemitter3": "^5.0.0",
-    "file-saver": "^2.0.5"
+    "glob": "^8.1.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "^7.20.2",
+    "@commitlint/cli": "^17.4.3",
+    "@commitlint/config-conventional": "^17.4.3",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.4.0",
-    "rollup": "^3.15.0",
-    "@babel/eslint-parser": "^7.19.1",
-    "@commitlint/cli": "^17.4.3",
-    "@commitlint/config-conventional": "^17.4.3",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "@types/glob": "^8.0.1",
+    "@types/lodash-es": "^4.17.6",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-html": "^7.1.0",
@@ -36,6 +44,8 @@
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
     "prettier": "^2.8.4",
+    "rollup": "^3.15.0",
+    "rollup-plugin-bundle-size": "^1.0.3",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-recess-order": "^3.1.0",
