--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "newapp-cli-template-sdk-ts",
+  "name": "newapp-cli-template-sdk-ts-new",
   "version": "1.0.0",
   "license": "MIT",
-  "description": "TS SDK模版-Rollup"
+  "description": "TS SDK模版-Rollup new"
 }
