--- a/template/package.json
+++ b/template/package.json
@@ -15,42 +15,45 @@
   "author": "{{author}}",
   "license": "ISC",
   "dependencies": {
-    "eventemitter3": "^5.0.0",
-    "glob": "^8.1.0",
-    "lodash": "^4.17.21"
+    "crypto-js": "^4.2.0",
+    "eventemitter3": "^5.0.1",
+    "glob": "^10.3.12",
+    "lodash-es": "^4.17.21",
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/preset-env": "^7.20.2",
-    "@commitlint/cli": "^17.4.3",
-    "@commitlint/config-conventional": "^17.4.3",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-terser": "^0.4.0",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "@types/glob": "^8.0.1",
-    "@types/lodash-es": "^4.17.6",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.9.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.1.2",
-    "postcss-html": "^1.5.0",
-    "postcss-scss": "^4.0.6",
-    "prettier": "^2.8.4",
-    "rollup": "^3.15.0",
+    "@babel/preset-env": "^7.24.4",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/glob": "^8.1.0",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-html": "^8.1.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^8.7.1",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "nodemon": "^3.1.0",
+    "postcss-html": "^1.6.0",
+    "postcss-scss": "^4.0.9",
+    "prettier": "^3.2.5",
+    "rollup": "^4.17.1",
     "rollup-plugin-bundle-size": "^1.0.3",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-recess-order": "^3.1.0",
     "stylelint-config-standard": "^24.0.0",
-    "stylelint-prettier": "^2.0.0"
+    "stylelint-prettier": "^3.0.0"
   },
   "browserslist": [
     "> 1%",
